--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-8 flex-align-center about-me d-flex row">
-          <h2>A bit about me..</h2>
-          <p class="large about-description">Currently taking the Coding-Accademy fullstack class and
+        <div class="col-sm-8 flex-align-center about-me row">
+          <h2 class="col-sm-4 text-center">A bit about me..</h2>
+          <p class="large about-description col-sm-8 text-center">Currently taking the Coding-Accademy fullstack class and
             learnning how to program from scratch!<br>
             Today i work as a surf instructor, hoping my next job would be with you as the best fullstack programmer you
             ever hired! <br>
