--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/ca-gallery.css" rel="stylesheet">
+  <link href="css/mobile-adjustments.css" rel="stylesheet">
 
 </head>
 
@@ -32,12 +33,12 @@
     <i class="fa fa-comment" aria-hidden="true"></i>
   </div>
   <aside class="offcanvas-aside">
-    <a href="./projects/touchTheNums/index.html"></a>
+    <!-- <a href="./projects/touchTheNums/index.html"></a> -->
     <!-- Contact -->
     <div class="close-canvas-btn-container">
       <button class="close-canvas-btn close-canvas-btn" onclick="openCanvas()">X</button>
     </div>
-    <section class="d-flex row flex-align-center">
+    <section class="d-flex row flex-align-center contact-form-container">
       <h4>Contact Me</h4>
       <!-- Form -->
       <form id="submit-form">
